# TinyGeo

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
include/TinyGeo/: Vector.h
src/: main.cpp
tests/: test_vector_ops.cpp
